--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "next-sanity": "^5.5.3",
     "postcss": "8.4.29",
     "react": "18.2.0",
